--- a/langs/fr-FR.json
+++ b/langs/fr-FR.json
@@ -71,7 +71,7 @@
   "BYPASS/HACK_MAIN_LEVELS": "Niveaux Démons Officiels",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "Débloque les niveaux Démons Officiels",
   "BYPASS/HACK_MUSIC_UNLOCKER": "Déblocage des musiques",
-  "BYPASS/HACK_MUSIC_UNLOCKER/TIP": "Débloque l'utilisation de la musique en mode Pratique et dans les Menus",
+  "BYPASS/HACK_MUSIC_UNLOCKER/TIP": "Débloque l'utilisation de la musique en mode Practice et dans les Menus",
   "BYPASS/HACK_SLIDER_LIMIT": "Limite des Sliders",
   "BYPASS/HACK_SLIDER_LIMIT/TIP": "Permet de faire glisser les sliders au-delà des limites visibles",
   "BYPASS/HACK_TEXT_LENGTH": "Texte illimité",
@@ -221,7 +221,7 @@
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT": "Sourdine à ",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/PRE": "Sourdine à ",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/SUF": "%",
-  "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_IN_PRACTICE": "Sourdine en Mode Pratique",
+  "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_IN_PRACTICE": "Sourdine en Mode Practice",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_WITH_STARTPOS": "Sourdine avec une StartPos",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/SHORTCUT": "Raccourci Mise en Sourdine",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/SHORTCUT/PRE": "Raccourci ",
@@ -262,8 +262,8 @@
   "LEVEL/FORCE_ICE/HACK_FORCE_ICE": "Forcer la glace",
   "LEVEL/FORCE_ICE/HACK_FORCE_ICE/TIP": "Force tous les blocs à devenir glissants (ou inversement si désactivé)",
   "LEVEL/FORCE_ICE/DROPDOWN/DISABLE": "Désactiver la glace",
-  "LEVEL/HACK_0_PRACTICE_COMPLETE": "Complétion Mode Pratique",
-  "LEVEL/HACK_0_PRACTICE_COMPLETE/TIP": "Complète le niveau en mode Normal si réussi en mode Pratique en une seule tentative",
+  "LEVEL/HACK_0_PRACTICE_COMPLETE": "Complétion Mode Practice",
+  "LEVEL/HACK_0_PRACTICE_COMPLETE/TIP": "Complète le niveau en mode Normal si réussi en mode Practice en une seule tentative",
   "LEVEL/HACK_ALL_MODES_PLATFORMER": "Mode de jeu = Mode Plateforme",
   "LEVEL/HACK_ALL_MODES_PLATFORMER/TIP": "Active tous les modes de jeu dans les niveaux en mode Plateforme",
   "LEVEL/HACK_ALLOW_PAUSE_BUFFERING": "Autoriser Pause Buffering",
@@ -278,16 +278,16 @@
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Limite de Checkpoints",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "Contourne la limite de 50 Checkpoints",
-  "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "Collect. Pièces Pratique",
-  "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE/TIP": "Collecte les pièces d'or et d'argent en mode Pratique (Par WEGFan)",
+  "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "Collect. Pièces Practice",
+  "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE/TIP": "Collecte les pièces d'or et d'argent en mode Practice (Par WEGFan)",
   "LEVEL/HACK_CONFIRM_EXIT": "Confirmer Quitter",
   "LEVEL/HACK_CONFIRM_EXIT/TIP": "Demande une confirmation avant de quitter le niveau",
   "LEVEL/HACK_CONFIRM_FULL_RESET": "Confirmer Reset Total",
   "LEVEL/HACK_CONFIRM_FULL_RESET/TIP": "Demande une confirmation avant une réinitialisation totale du niveau",
   "LEVEL/HACK_CONFIRM_NORMAL": "Confirmer Mode Normal",
-  "LEVEL/HACK_CONFIRM_NORMAL/TIP": "Demande une confirmation avant de quitter le mode Pratique",
-  "LEVEL/HACK_CONFIRM_PRACTICE": "Confirmer Mode Pratique",
-  "LEVEL/HACK_CONFIRM_PRACTICE/TIP": "Demande une confirmation avant d'entrer en mode Pratique",
+  "LEVEL/HACK_CONFIRM_NORMAL/TIP": "Demande une confirmation avant de quitter le mode Practice",
+  "LEVEL/HACK_CONFIRM_PRACTICE": "Confirmer Mode Practice",
+  "LEVEL/HACK_CONFIRM_PRACTICE/TIP": "Demande une confirmation avant d'entrer en mode Practice",
   "LEVEL/HACK_CONFIRM_RESET": "Confirmer Réinitialisation",
   "LEVEL/HACK_CONFIRM_RESET/TIP": "Demande une confirmation avant de réinitialiser au dernier Checkpoint",
   "LEVEL/HACK_FORCE_PLATFORMER": "Mode Plateforme Partout",
@@ -298,12 +298,12 @@
   "LEVEL/HACK_JUMP_HACK/TIP": "Hauteur de saut infini",
   "LEVEL/HACK_PAUSE_DURING_COMPLETE": "Pause pendant complétion",
   "LEVEL/HACK_PAUSE_DURING_COMPLETE/TIP": "Permet de mettre en pause le jeu pendant l'animation de complétion",
-  "LEVEL/HACK_PRACTICE_BUG_FIX": "Correction Mode Pratique",
-  "LEVEL/HACK_PRACTICE_BUG_FIX/TIP": "Sauvegarde et restaure la vélocité du joueur en mode Pratique à la mort",
-  "LEVEL/HACK_PRACTICE_MUSIC": "Musique Mode Pratique",
-  "LEVEL/HACK_PRACTICE_MUSIC/TIP": "Utilise la musique normale du niveau au lieu de la musique du mode Pratique",
+  "LEVEL/HACK_PRACTICE_BUG_FIX": "Correction Mode Practice",
+  "LEVEL/HACK_PRACTICE_BUG_FIX/TIP": "Sauvegarde et restaure la vélocité du joueur en mode Practice à la mort",
+  "LEVEL/HACK_PRACTICE_MUSIC": "Musique Mode Practice",
+  "LEVEL/HACK_PRACTICE_MUSIC/TIP": "Utilise la musique normale du niveau au lieu de la musique du mode Practice",
   "LEVEL/HACK_REPLAY_LAST_CHECKPOINT": "Rejouer Dernier Checkpoint",
-  "LEVEL/HACK_REPLAY_LAST_CHECKPOINT/TIP": "Permet de réapparaître depuis le dernier checkpoint en mode Pratique après avoir complété un niveau",
+  "LEVEL/HACK_REPLAY_LAST_CHECKPOINT/TIP": "Permet de réapparaître depuis le dernier checkpoint en mode Practice après avoir complété un niveau",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/HACK_SHOW_HITBOXES_ON_DEATH": "Hitboxes à la mort",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/HACK_SHOW_HITBOXES_ON_DEATH/TIP": "Permet d'afficher les Hitboxes des objets uniquement après une mort",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/NOCLIP": "Afficher avec Noclip",
@@ -316,7 +316,7 @@
   "LEVEL/HACK_SHOW_TRIGGERS/TIP": "Affiche tous les déclencheurs du niveau en jouant",
   "LEVEL/HACK_SHIPCOPTER": "Shipcopter",
   "LEVEL/HACK_SHIPCOPTER/TIP": "Ajoute les contrôles de la Ship au mode Swing, en gardant la physique du Swing",
-  "LEVEL/HITBOX_MULTIPLIER/HACK_HITBOX_MULTIPLIER": "Multiplicateur Hibox",
+  "LEVEL/HITBOX_MULTIPLIER/HACK_HITBOX_MULTIPLIER": "Multiplicateur Hitbox",
   "LEVEL/HITBOX_MULTIPLIER/HACK_HITBOX_MULTIPLIER/TIP": "Redéfinit la taille des hitboxes en fonction du multiplicateur défini",
   "LEVEL/HITBOX_MULTIPLIER/DROPDOWN/HAZARDS/ENABLED": "Dangers",
   "LEVEL/HITBOX_MULTIPLIER/DROPDOWN/HAZARDS/MULTIPLIER": "Multiplicateur",
@@ -361,7 +361,7 @@
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED": "Seed ",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED/PRE": "Seed ",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED": "Seed aléatoire",
-  "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED/TIP": "Rend les déclencheurs aléatoires cohérents entre les tentatives (même en mode Pratique)",
+  "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED/TIP": "Rend les déclencheurs aléatoires cohérents entre les tentatives (même en mode Practice)",
   "LEVEL/RESPAWN_TIME/DROPDOWN/SPINNER": "Temps (ms) ",
   "LEVEL/RESPAWN_TIME/DROPDOWN/SPINNER/SUF": "ms",
   "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME": "Temps de réapparition",
@@ -519,12 +519,12 @@
   "UTILITY/DIRECTIONAL/P1_RIGHT": "Droite",
   "UTILITY/DIRECTIONAL/P2_LEFT": "Gauche",
   "UTILITY/DIRECTIONAL/P2_RIGHT": "Droite",
-  "UTILITY/UNCOMPLETE_LEVEL": "Annuler Niveau",
+  "UTILITY/UNCOMPLETE_LEVEL": "Réinitialiser Niveau",
   "UTILITY/UNCOMPLETE_LEVEL/TIP": "Retire toutes les statistiques et annule la progression du niveau",
   "UTILITY/RESTART_LEVEL": "Redémarrer Niveau",
   "UTILITY/RESTART_LEVEL/TIP": "Redémarre le niveau actuel",
-  "UTILITY/PRACTICE_MODE": "Mode Pratique",
-  "UTILITY/PRACTICE_MODE/TIP": "Active/désactive le mode pratique dans le niveau actuel",
+  "UTILITY/PRACTICE_MODE": "Mode Practice",
+  "UTILITY/PRACTICE_MODE/TIP": "Active/désactive le mode Practice dans le niveau actuel",
   "UTILITY/SETTINGS": "Paramètres",
   "UTILITY/SETTINGS/TIP": "Ouvre le menu des paramètres en jeu",
   "UTILITY/FOLDERS/RESOURCES": "Ressources",
