--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -209,7 +209,7 @@
   "CREATOR/HACK_NO_C_MARK/TIP": "Удаляет (C) метку при выкладывании скопированного уровня",
   "CREATOR/HACK_PLACE_OVER": "Ставить поверх",
   "CREATOR/HACK_PLACE_OVER/TIP": "Позволяет ставить одни и те же объекты друг поверх друга",
-  "CREATOR/HACK_SMOOTH_EDITOR_TRAIL": "Плавный след в практике",
+  "CREATOR/HACK_SMOOTH_EDITOR_TRAIL": "Плавный след в редакторе",
   "CREATOR/HACK_SMOOTH_EDITOR_TRAIL/TIP": "Делает след игрока в редакторе более плавным за счет его обновления каждый кадр, а не 30 раз в секунду",
   "CREATOR/HACK_TOOLBOX_BUTTON_BYPASS": "Без ограничения строк и колонок",
   "CREATOR/HACK_TOOLBOX_BUTTON_BYPASS/TIP": "Позволяет выставлять любое количество строк и колонок в списке объектов редактора",
@@ -303,7 +303,7 @@
   "LEVEL/HACK_PRACTICE_MUSIC": "Музыка в практике",
   "LEVEL/HACK_PRACTICE_MUSIC/TIP": "Разрешает использовать оригинальную музыку уровня в практике",
   "LEVEL/HACK_REPLAY_LAST_CHECKPOINT": "Возрождение с последнего чекпоинта",
-  "LEVEL/HACK_REPLAY_LAST_CHECKPOINT/TIP": "После прохождения уровня игрок возраждается с последнеко чекпоинта",
+  "LEVEL/HACK_REPLAY_LAST_CHECKPOINT/TIP": "После прохождения уровня игрок возрождается с последнеко чекпоинта",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/HACK_SHOW_HITBOXES_ON_DEATH": "Хитбоксы при смерти",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/HACK_SHOW_HITBOXES_ON_DEATH/TIP": "Показывает хитбоксы только при смерти",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/NOCLIP": "Показывать при включенном ноуклипе",
