--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -85,15 +85,15 @@
   "BYPASS/HACK_UNLOCK_VAULTS": "Хранилища",
   "BYPASS/HACK_UNLOCK_VAULTS/TIP": "Открывает все хранилища",
   "COSMETIC": "Косметика",
-  "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE": "Аккуратные проценты",
+  "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE": "Точные проценты",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE/TIP": "Позволяет настраивать точность процентов",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS": "Аккуратные проценты",
+  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS": "Точные проценты",
   "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/0": "1 знака после запятой",
   "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/1": "2 знака после запятой",
   "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/2": "3 знака после запятой",
   "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "4 знака после запятой",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "Баг вращения",
-  "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "Воссоздаёт баг вращения из 2.0",
+  "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "Воссоздает баг из 2.0 из-за которого переход из шара в другие режимы мог начинать эффект бочки",
   "COSMETIC/HACK_CLASSIC_PARTICLES": "Классические частицы",
   "COSMETIC/HACK_CLASSIC_PARTICLES/TIP": "Возвращает частицы, которые следуют за игроком на мини режимах",
   "COSMETIC/HACK_CLASSIC_PULSE": "Классические пульсации",
@@ -292,7 +292,7 @@
   "LEVEL/HACK_CONFIRM_RESET/TIP": "Требует подтверждение, прежде чем перезапустить уровень",
   "LEVEL/HACK_FORCE_PLATFORMER": "Платформер везде",
   "LEVEL/HACK_FORCE_PLATFORMER/TIP": "Включает режим платформера во всех уровнях",
-  "LEVEL/HACK_INSTANT_COMPLETE": "Мгновенное завершение",
+  "LEVEL/HACK_INSTANT_COMPLETE": "Мгновенное прохождение",
   "LEVEL/HACK_INSTANT_COMPLETE/TIP": "Телепортирует в конец уровня",
   "LEVEL/HACK_JUMP_HACK": "Свободный прыжок",
   "LEVEL/HACK_JUMP_HACK/TIP": "Убирает лимит высоты прыжка игрока",
