--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -396,7 +396,7 @@
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/R": "Горячая клавиша вправо",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/R/PRE": "Вправо",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/ALLOW_RATED": "Разрешить в оцененных уровнях",
-  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/DISABLE_IN_PRACTICE": "Отключить в режиме практике",
+  "LEVEL/STARTPOS_SWITCHER/DROPDOWN/DISABLE_IN_PRACTICE": "Отключить в режиме практики",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/INTERFACE_SIZE": "Размер интерфейса",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/INTERFACE_SIZE/PRE": "Размер интерфейса",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/INTERFACE_SIZE/SUF": "х",
