Update German translations in de-DE.json

--- a/langs/de-DE.json
+++ b/langs/de-DE.json
@@ -2,37 +2,37 @@
   "NX/COLOUR/B": "Blau",
   "NX/COLOUR/DROPDOWN/INPUT": "Hex Farbe",
   "NX/COLOUR/G": "Grün",
-  "NX/COLOUR/H": "",
+  "NX/COLOUR/H": "Farbton",
   "NX/COLOUR/INPUT": "Hex Farbe",
   "NX/COLOUR/R": "Rot",
-  "NX/COLOUR/S": "",
-  "NX/COLOUR/V": "",
+  "NX/COLOUR/S": "Sättigung",
+  "NX/COLOUR/V": "Helligkeit",
   "NX/COLOUR/RESET": "Farbe zurücksetzen",
-  "NX/COMBO/EMPTY": "",
-  "NX/PICKER/EMPTY": "",
-  "NX/PICKER/INPUT": "",
-  "ERROR": "",
-  "ERROR/DISMISS": "",
+  "NX/COMBO/EMPTY": "Keine Gegendstände...",
+  "NX/PICKER/EMPTY": "Keine Dateien gefunden...",
+  "NX/PICKER/INPUT": "Dateienname",
+  "ERROR": "Fehler!",
+  "ERROR/DISMISS": "Ignorieren",
   "ERROR/HACKPRO/CONFLICTING_RULESET": "",
   "ERROR/REPLAY/EMPTY_FILENAME": "",
-  "ERROR/REPLAY/FILE_NOT_FOUND": "",
+  "ERROR/REPLAY/FILE_NOT_FOUND": "Datei nicht gefunden",
   "ERROR/REPLAY/NO_INPUTS": "",
   "ERROR/STATUS/MAX_FIELDS": "",
-  "ERROR/LEVEL/NO_CBF": "",
-  "MESSAGE": "",
-  "MESSAGE/OK": "",
-  "MESSAGE/CANCEL": "",
-  "MESSAGE/YES": "",
-  "MESSAGE/NO": "",
-  "MESSAGE/HOME/CONFIRM_LOGOUT": "",
-  "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "",
-  "MESSAGE/HOME/LOGOUT_SUCCESS": "",
-  "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "",
-  "MESSAGE/REPLAY/CONFIRM_CLEAR": "",
-  "MESSAGE/REPLAY/CONFIRM_DELETE": "",
-  "MESSAGE/REPLAY/CONVERT_SUCCESS": "",
-  "MESSAGE/REPLAY/SAVE": "",
-  "MESSAGE/KEYBINDS/EMPTY": "",
+  "ERROR/LEVEL/NO_CBF": "Installieren sie "Click Between Frames" auf Geode!",
+  "MESSAGE": "Nachricht",
+  "MESSAGE/OK": "OK",
+  "MESSAGE/CANCEL": "Abbrechen",
+  "MESSAGE/YES": "Ja",
+  "MESSAGE/NO": "Nein",
+  "MESSAGE/HOME/CONFIRM_LOGOUT": "Möchten Sie sich wirklich von Mega Hack abmelden?",
+  "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "Möchten Sie wirklich Ihre Mega Hack v8-Einstellungen laden? Dadurch wird Ihre aktuelle Konfiguration überschrieben.",
+  "MESSAGE/HOME/LOGOUT_SUCCESS": "Erfolgreich abgemeldet! Sie können Mega Hack bis zum Neustart verwenden.",
+  "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "Bitte beenden Sie den Play-layer/Editor, bevor Sie den Vollbildmodus aktivieren.",
+  "MESSAGE/REPLAY/CONFIRM_CLEAR": "Sie haben ungespeicherte Änderungen in Ihrem Makro. Möchten Sie diese wirklich löschen und neu beginnen?",
+  "MESSAGE/REPLAY/CONFIRM_DELETE": "Möchten Sie das ausgewählte Makro wirklich löschen?",
+  "MESSAGE/REPLAY/CONVERT_SUCCESS": "Makro erfolgreich konvertiert! Finden Sie es zusammen mit Ihren anderen Makros.",
+  "MESSAGE/REPLAY/SAVE": "Möchten Sie die Änderungen an Ihrem Makro speichern?",
+  "MESSAGE/KEYBINDS/EMPTY": "Bitte geben Sie zuerst eine Tastenkombination ein.",
   "GM_VAR/0060": "",
   "GM_VAR/0061": "",
   "GM_VAR/0062": "",
@@ -507,7 +507,7 @@
   "DISPLAY/DELTA/HACK_REAL_TIME": "Echtzeit",
   "DISPLAY/DELTA/HACK_REAL_TIME/TIP": "Ermöglicht das Voranschreiten um mehrere Delta-gesperrte Frames in einem visuellen Frame, vermeidet ein Verlangsamen des Spiels bei Lag",
   "DISPLAY/HACK_BORDERLESS_CLASSIC": "Klassisch unbegrenzt",
-  "DISPLAY/HACK_BORDERLESS_CLASSIC/TIP": "",
+  "DISPLAY/HACK_BORDERLESS_CLASSIC/TIP": "(sub to ProfZ) Klassische Implementierung des randlosen Vollbildmodus (unabhängig von der Implementierung von GD)",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN": "Vollbild",
   "DISPLAY/FULLSCREEN/HACK_FULLSCREEN/TIP": "",
   "DISPLAY/FULLSCREEN/COMBO/0": "Exklusiv",
@@ -538,14 +538,14 @@
   "SCREENSHOT/COMBO/1": "Kopieren",
   "SCREENSHOT/COMBO/2": "",
   "STATUS": "",
-  "STATUS/HIDE": "",
-  "STATUS/FONT": "",
-  "STATUS/COSMETIC/OPACITY": "",
-  "STATUS/COSMETIC/OPACITY/PRE": "",
-  "STATUS/COSMETIC/OPACITY/SUF": "",
-  "STATUS/COSMETIC/SCALE": "",
-  "STATUS/COSMETIC/SCALE/PRE": "",
-  "STATUS/COSMETIC/SCALE/SUF": "",
+  "STATUS/HIDE": "Verstecke Status",
+  "STATUS/FONT": "Schriftart",
+  "STATUS/COSMETIC/OPACITY": "Deckkraft",
+  "STATUS/COSMETIC/OPACITY/PRE": "Deckkraft",
+  "STATUS/COSMETIC/OPACITY/SUF": "x",
+  "STATUS/COSMETIC/SCALE": "Skala",
+  "STATUS/COSMETIC/SCALE/PRE": "Skala",
+  "STATUS/COSMETIC/SCALE/SUF": "x",
   "STATUS/FIELDS": "",
   "STATUS/FIELDS/0/FORMAT": "",
   "STATUS/FIELDS/1/FORMAT": "",
@@ -579,27 +579,27 @@
   "STATUS/*/MOVE/DOWN": "",
   "STATUS/*/MOVE/UP": "",
   "STATUS/*/UNITS": "",
-  "STATUS/MESSAGE/ENABLED": "",
-  "STATUS/MESSAGE/DROPDOWN/MESSAGE": "",
+  "STATUS/MESSAGE/ENABLED": "Nachricht",
+  "STATUS/MESSAGE/DROPDOWN/MESSAGE": "Nachricht",
   "STATUS/TESTMODE/ENABLED": "",
-  "STATUS/CHEAT_INDICATOR/ENABLED": "",
-  "STATUS/FPS/ENABLED": "",
-  "STATUS/CPS/ENABLED": "",
+  "STATUS/CHEAT_INDICATOR/ENABLED": "Cheat-Indikator",
+  "STATUS/FPS/ENABLED": "FPS Zähler",
+  "STATUS/CPS/ENABLED": "CPS Zähler",
   "STATUS/CPS/DROPDOWN/MAX": "",
   "STATUS/CPS/DROPDOWN/TOTAL": "",
-  "STATUS/BEST_RUN/ENABLED": "",
-  "STATUS/NOCLIP_ACCURACY/ENABLED": "",
+  "STATUS/BEST_RUN/ENABLED": "Bester Run",
+  "STATUS/NOCLIP_ACCURACY/ENABLED": "Noclip-Genauigkeit",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "",
-  "STATUS/NOCLIP_DEATHS/ENABLED": "",
-  "STATUS/ATTEMPTS/ENABLED": "",
-  "STATUS/JUMPS/ENABLED": "",
-  "STATUS/LEVEL_TIME/ENABLED": "",
-  "STATUS/PERCENTAGE/ENABLED": "",
-  "STATUS/CLOCK/ENABLED": "",
-  "STATUS/CLOCK/DROPDOWN/TWELVE_HOUR": "",
-  "STATUS/FRAME/ENABLED": "",
-  "STATUS/POSITION/ENABLED": "",
-  "STATUS/REPLAY_STATE/ENABLED": "",
+  "STATUS/NOCLIP_DEATHS/ENABLED": "Noclip-Tode",
+  "STATUS/ATTEMPTS/ENABLED": "Versuche",
+  "STATUS/JUMPS/ENABLED": "Sprünge",
+  "STATUS/LEVEL_TIME/ENABLED": "Level-Zeit",
+  "STATUS/PERCENTAGE/ENABLED": "Prozentzahl",
+  "STATUS/CLOCK/ENABLED": "Uhr",
+  "STATUS/CLOCK/DROPDOWN/TWELVE_HOUR": "12-Stunden",
+  "STATUS/FRAME/ENABLED": "Frame",
+  "STATUS/POSITION/ENABLED": "Position",
+  "STATUS/REPLAY_STATE/ENABLED": "Wiedergabestatus",
   "REPLAY": "",
   "REPLAY/FILE": "",
   "REPLAY/OPEN": "",
