--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -572,10 +572,10 @@
   "STATUS/FIELDS/22/FORMAT": "Линия статуса 23",
   "STATUS/FIELDS/23/FORMAT": "Линия статуса 24",
   "STATUS/*/POSITION": "Настроить позицию",
-  "STATUS/*/POSITION/0": "Верх-Лево",
-  "STATUS/*/POSITION/1": "Верх-Право",
-  "STATUS/*/POSITION/2": "Низ-Лево",
-  "STATUS/*/POSITION/3": "Низ-Право",
+  "STATUS/*/POSITION/0": "Сверху слева",
+  "STATUS/*/POSITION/1": "Сверху справа",
+  "STATUS/*/POSITION/2": "Снизу слева",
+  "STATUS/*/POSITION/3": "Снизу справа",
   "STATUS/*/MOVE/DOWN": "Вниз",
   "STATUS/*/MOVE/UP": "Вверх",
   "STATUS/*/UNITS": "Показывать единицы измерения",
