--- a/langs/tr-TR.json
+++ b/langs/tr-TR.json
@@ -269,12 +269,11 @@
   "LEVEL/HACK_ALLOW_PAUSE_BUFFERING": "Duraklatma Buffer'ına İzin Ver",
   "LEVEL/HACK_ALLOW_PAUSE_BUFFERING/TIP": "Duraklatma buffer'ı hile korumasını devre dışı bırakır",
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD": "Otomatik Şarkı İndirme",
-  "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Seviyenin sayfası açıldığında şarkıları otomatik indirir",
+  "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Seviye sayfası açıldığında şarkıları otomatik indirir",
   "LEVEL/HACK_AUTO_START_POS": "Otomatik StartPos",
   "LEVEL/HACK_AUTO_START_POS/TIP": "StartPos'ları otomatik olarak portallara yerleştirir",
-  "LEVEL/HACK_CBF": "Click Between Frames",
-  "LEVEL/HACK_CBF/TIP": "Syzzi'nin Click Between Frames modunu açıp kapatır (kurulu olmalı!)",
-  "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Seviye sayfası açıldığında şarkıları otomatik indirir",
+  "LEVEL/CBF/HACK_CBF": "",
+  "LEVEL/CBF/HACK_CBF/TIP": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "Click on Steps",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "Girişleri yalnızca 240 TPS hassassiyetle algılar, sıradan fiziği korur.",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Checkpoint Limit Baypas",
