--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -54,7 +54,7 @@
   "HOME/SCALE/PRE": "Размер интерфейса",
   "HOME/SCALE/SUF": "х",
   "HOME/THEME": "Тема",
-  "HOME/MISC": "Смешанное",
+  "HOME/MISC": "Прочее",
   "HOME/MISC/LICENSES": "Лицензии",
   "HOME/MISC/LOAD_LANG": "Выбрать язык",
   "HOME/MISC/LOAD_LEGACY_SAVE": "Импортировать сохранение из 8 версии",
@@ -315,7 +315,7 @@
   "LEVEL/HACK_SHOW_TRIGGERS": "Показывать триггеры",
   "LEVEL/HACK_SHOW_TRIGGERS/TIP": "Визуализирует триггеры при игре в уровень",
   "LEVEL/HACK_SHIPCOPTER": "Корабль-коптер",
-  "LEVEL/HACK_SHIPCOPTER/TIP": "Добавляет упраление как на корабле для свинг-коптера, сохраняет физику свинг-коптера",
+  "LEVEL/HACK_SHIPCOPTER/TIP": "Добавляет упраление как на корабле для свинг-коптера, сохраняет физику свинг-коптера. Сделано Beat",
   "LEVEL/HITBOX_MULTIPLIER/HACK_HITBOX_MULTIPLIER": "Множитель хитбоксов",
   "LEVEL/HITBOX_MULTIPLIER/HACK_HITBOX_MULTIPLIER/TIP": "Меняет размер хитбоксов, умножая на выставленный множитель",
   "LEVEL/HITBOX_MULTIPLIER/DROPDOWN/HAZARDS/ENABLED": "Опасные",
@@ -421,7 +421,7 @@
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "Игра в главном меню",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "Позволяет управлять иконками в главном меню игры",
   "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "Без затухания",
-  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "Отключает затухание музыки в конце уровня",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "Отключает затухание музыки в конце уровня. Сделано Beat",
   "UNIVERSAL/HACK_NO_TRANSITION": "Без переходов",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Удаляет время перехода мужду сценами",
   "UNIVERSAL/HACK_SAFE_MODE": "Безопасный режим",
@@ -502,7 +502,7 @@
   "DISPLAY/PHYSICS_BYPASS/HACK_PHYSICS_BYPASS/TIP": "Отключает лимит физики в 240 тиков в секунду, используя вместо этого значения FPS/TPS (самое высокое из них). НЕ является репликой физики из 2.1",
   "DISPLAY/PHYSICS_BYPASS/SPINNER": "Тики физики (Герц)",
   "DISPLAY/PHYSICS_BYPASS/SPINNER/SUF": " Герц",
-  "DISPLAY/DELTA/HACK_LOCK_DELTA": "Блокировка кадров",
+  "DISPLAY/DELTA/HACK_LOCK_DELTA": "Блокировка",
   "DISPLAY/DELTA/HACK_LOCK_DELTA/TIP": "Фиксирует время кадра во время игры для стабильности, в основном полезно для записи макросов",
   "DISPLAY/DELTA/HACK_REAL_TIME": "Реальное время",
   "DISPLAY/DELTA/HACK_REAL_TIME/TIP": "Позволяет проходить большее расстояние за кадр когда используете Блокировку Кадров, избегая замедления игры",
